# athena-recruitment-analytics

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.changelog  README.md  app.py  create_mock_data.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_docs.txt
.github/workflows/: apisec-scan.yml  bandit.yml  build-and-deploy-material-docs.yml  build-and-push-docker.yml  build-material-docs.yml  changelog.yml  codeql.yml  publish-material-docs.yml  publish-to-github-pages.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
CREDITS/: index.html
LICENSE/: index.html
SECURITY/: index.html
SUPPORT/: index.html
assets/: styles.css
callbacks/: update_figures.py
configuration/: index.html
dashboard/: control_panel.py  data_visualizations.py  insights.py
data/job_applications/Analytics Engineer - BMW [NL] (N)/: job_description.txt
data/job_applications/Artificial Intelligence - BMW [US] (VR)/: job_description.txt
data/job_applications/Azure Data Engineer - Deloitte [CA] (CITIO)/: job_description.txt
data/job_applications/Azure Data Engineer - Heineken [CH] (I)/: job_description.txt  john_smith_cover_letter.txt
data/job_applications/Azure Data Engineer - HelloFresh [AT] (VR)/: job_description.txt
data/mappings/: GICS-2023.csv  company_industry.json  countries_ISO.csv  fields.json  map_projections.json  position_field.json  status.json
data/output/: parsed_data.csv
data_engine/: data_generator.py  data_loader.py  data_parser.py
demo/: index.html
docs/: CONTRIBUTING.md  CREDITS.md  LICENSE.md  SECURITY.md  SUPPORT.md  configuration.md  demo.md  index.md  instructions.md  prerequisites.md
instructions/: index.html
pages/: generate_layout.py
prerequisites/: index.html
search/: search_index.json
src/: control_panel.py  data_generator.py  data_loader.py  data_parser.py  data_visualizations.py  insights.py
utils/: levels.py
(+35 files in other folders)
