[tool.poetry]
name = "athena-recruitment-analytics"
version = "0.1.0"
description = "Application Tracking \\& Recruitment Analytics Dashboard"
authors = ["Fox Techniques <info@fox-techniques.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
irene-sankey = "^1.1.1"
mkdocs-material = "^9.5.46"
torch = {version = "^2.5.1", extras = ["cpu"]}
transformers = {version = "^4.46.3", extras = ["cpu"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
