[tool.poetry]
name = "athena-recruitment-analytics"
version = "0.1.0"
description = "Application Tracking \\& Recruitment Analytics Dashboard"
authors = ["FOX Techniques <ali.nabbi@fox-techniques.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
irene-sankey = "^1.1.1"
mkdocs-material = "^9.5.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
